--- a/mod.conf
+++ b/mod.conf
@@ -1,4 +1,4 @@
 name = areas_pay
 description = With this mod you can rent and buy areas in minetest.
-depends = jeans_economy, areas
+depends = default, dye, jeans_economy, areas, worldedit
 optional_depends =
